--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@solana/web3.js": "^1.98.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/qrcode": "^1.5.5",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "ed25519-hd-key": "^1.3.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
